deploy/manifests/ingress/gnomad.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gnomad-ingress
  labels:
    tier: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: exac-gnomad-prod
    networking.gke.io/managed-certificates: gnomad
    networking.gke.io/v1beta1.FrontendConfig: "gnomad-frontend-config"
spec:
  rules:
  - host: gnomad.broadinstitute.org
    http:
      paths:
      - backend:
          service:
            name: gnomad-reads
            port:
              number: 80
        path: /reads
        pathType: ImplementationSpecific
      - backend:
          service:
            name: gnomad-reads
            port:
              number: 80
        path: /reads/*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: gnomad-blog
            port:
              number: 80
        path: /blog
        pathType: ImplementationSpecific
      - backend:
          service:
            name: gnomad-blog
            port:
              number: 80
        path: /blog/*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: gnomad-blog
            port:
              number: 80
        path: /news
        pathType: ImplementationSpecific
      - backend:
          service:
            name: gnomad-blog
            port:
              number: 80
        path: /news/*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: gnomad-browser
            port:
              number: 80
        pathType: ImplementationSpecific
